Changes to be committed: 	modified:   HTmlversion2/assets/css/master.css 	modified:   HTmlversion2/filiere.php 	new file:   HTmlversion2/get_chapters.php 	deleted:    HTmlversion2/math.HTML 	modified:   HTmlversion2/premiere.php 	modified:   HTmlversion2/quizs.php 	new file:   HTmlversion2/upload/Brown and White Marble Surface Website Mockup Instagram Post.png 	new file:   HTmlversion2/upload/logo (4).png 	new file:   HTmlversion2/upload/logo.png 	new file:   platformEducation/aa.php 	new file:   platformEducation/assets/js/script.js 	modified:   platformEducation/dexiemAnnee.php 	modified:   platformEducation/index.php 	modified:   platformEducation/premierAnnee.php 	modified:   platformEducation/troisiemeAnnee.php

--- a/HTmlversion2/assets/css/master.css
+++ b/HTmlversion2/assets/css/master.css
@@ -1362,7 +1362,7 @@ ul {
   background-color: #ffe6e6;
 }
 
-.add-question-btn {
+.add-question-btn,.add-choice-btn {
   display: block;
   margin-top: 10px;
   padding: 10px;
@@ -1374,7 +1374,7 @@ ul {
   cursor: pointer;
 }
 
-.add-question-btn:hover {
+.add-question-btn:hover,.add-choice-btn:hover  {
   background-color: #cfa7c6;
 }
 
