Changes to be committed: 	new file:   HTmlversion2/delete_sub.php 	new file:   HTmlversion2/get_cours.php 	modified:   HTmlversion2/get_schapters.php 	modified:   HTmlversion2/premiere.php 	modified:   HTmlversion2/programme.php 	modified:   platformEducation/aa.php 	modified:   platformEducation/assets/css/style.css 	modified:   platformEducation/assets/js/script.js 	modified:   platformEducation/premierAnnee.php

--- a/platformEducation/assets/css/style.css
+++ b/platformEducation/assets/css/style.css
@@ -6932,3 +6932,8 @@ h1, h2, h3, h4, h5, h6 {
   left: 10px;
   cursor: pointer;
 }
+.etat-chapitre {
+  float: left;
+  /* Adjust the margin as needed */
+  /* Additional styles if needed */
+}
