Changes to be committed: 	modified:   HTmlversion2/assets/css/des.css 	modified:   HTmlversion2/assets/css/master.css 	modified:   HTmlversion2/config/connexion.php 	modified:   HTmlversion2/cours.php 	modified:   HTmlversion2/deuxieme.php 	deleted:    HTmlversion2/includes/footer.php 	modified:   HTmlversion2/index.php 	modified:   HTmlversion2/login.php 	modified:   HTmlversion2/premiere.php 	modified:   HTmlversion2/quizs.php 	modified:   HTmlversion2/troisieme.php 	new file:   HTmlversion2/upload/Brown and White Marble Surface Website Mockup Instagram Post (1).png 	deleted:    HTmlversion2/upload/Brown and White Marble Surface Website Mockup Instagram Post.png 	deleted:    HTmlversion2/upload/logo (4).png 	modified:   platformEducation/aa.php 	modified:   platformEducation/assets/css/style.css 	new file:   platformEducation/check_quiz_answers.php 	modified:   platformEducation/config/connexion.php 	new file:   platformEducation/get_response_state.php 	modified:   platformEducation/profile.php 	new file:   platformEducation/save_grade.php

--- a/HTmlversion2/assets/css/des.css
+++ b/HTmlversion2/assets/css/des.css
@@ -21,7 +21,7 @@ border: 1px solid #ccc; /* Ajouter une bordure aux inputs */
 border-radius: 5px; /* Ajouter une bordure arrondie aux inputs */
 }
 
-button[type="submit"] {
+button[type="submit"],.cc {
 padding: 10px 20px; /* Augmenter la taille du padding */
 background-color: #cfa7c6;
 color: white;
@@ -30,7 +30,7 @@ border-radius: 5px; /* Ajouter une bordure arrondie au bouton */
 cursor: pointer;
 }
 
-button[type="submit"]:hover {
+button[type="submit"]:hover,.cc:hover {
 background-color: #e827bb;
 }
 
