--- a/platformEducation/assets/css/style.css
+++ b/platformEducation/assets/css/style.css
@@ -6937,3 +6937,9 @@ h1, h2, h3, h4, h5, h6 {
   /* Adjust the margin as needed */
   /* Additional styles if needed */
 }
+.button-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+
